fix: (Input) fix opacity when input is disabled on iOS Safari

--- a/src/components/input/input.less
+++ b/src/components/input/input.less
@@ -68,6 +68,9 @@
   &::-webkit-search-decoration {
     display: none;
   }
+  &:disabled {
+    opacity: 1;
+  }
 
   // for ios
   &[type='date'],
